--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+    <!-- Navbar -->
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
         <div class="container-fluid text-center">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,6 +44,22 @@
           </div>
         </div>
       </nav>
+
+      <!-- Header Image / Text -->
+
+      <div class="container-fluid p-0 m-0">
+        <div class="row">
+            <img class="header-image" src="./assets/header.jpg" alt="">
+        </div>
+        <div class="container header-text text-center p-5">
+            <h2> Run on the wheel of luxury </h2>
+            <p> Explore everything the beach has to offer on our relaxing resort </p>
+        </div>
+      </div>
+
+      <!-- Introduction -->
+
+      
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
