--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
       <!-- Header Image / Text -->
 
-      <div class="container-fluid p-0 m-0">
+      <div class="container-fluid container-height p-0 m-0">
         <div class="row">
-            <img class="header-image" src="./assets/header.jpg" alt="">
+            <img class="header-image" src="./assets/header.jpg" alt="beach resort banner">
         </div>
         <div class="container header-text text-center p-5">
             <h2> Run on the wheel of luxury </h2>
@@ -59,7 +59,88 @@
 
       <!-- Introduction -->
 
-      
+      <div class="container intro-container ps-5 pe-5">
+        <div class="row">
+            <div class="col-4"> 
+                <img class="hamster-image" src="./assets/hamsterhomejpg.jpg" alt="">
+            </div>
+            <div class="col-7 intro-text">
+                <h3> Welcome to a hamster's paradise </h3>
+                <p> 
+                    Nestled in the heart of Cavia California, La Petite Maison is a luxury hotel designed for the small mammal with extravagance in mind. Escape to the warm comforts of stunning rooms, a relaxing spa, and a pool with a beach side view.
+                </p>
+                <p>
+                    Inspired by the warm beauty of the California Coast, we invite you to enjoy the rich accommodations along with our unmatched luxury. Discover the satisfaction of indulging in our quality rooms, and thank you for choosing La Petite Maison.
+                </p>
+                <div class="row">
+                    <div class="col-4">
+                        <img class="image-finest" src="./assets/awardfinest.png" alt="">
+                    </div>
+                    <div class="col-4">
+                        <img class="image-satisfaction" src="./assets/awardsatisfaction.png" alt="">
+                    </div>
+                    <div class="col-4">
+                        <img class="image-genuine" src="./assets/awardgenuine.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <!-- Our Room Cards / Background -->
+
+      <div class="container-fluid p-0">
+        <div class="row">
+            <img class="roomcard-background" src="./assets/bg2.jpg" alt="">
+        </div>
+        <div class="container card-container">
+            <div class="row">
+                <p class="room-titletext"> Our Rooms </p>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card rounded-0 border-0" style="width: 18rem;">
+                        <img src="./assets/room1.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title"> Queen Room </h5>
+                          <h6 class="card-secondtitle"> 850 SQ FT room with city view </h6>
+                          <p class="card-text"> • One queen size bed </p>
+                          <p class="card-text"> • Seed Bar, fireplace and large balcony </p>
+                          <p class="card-text"> • Small kitchen with a refrigerator and stove </p>
+                          <a href="#" class="btn btn-primary rounded-0 ps-4 pe-4"> Reserve </a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-4">
+                    <div class="card rounded-0 border-0" style="width: 18rem;">
+                        <img src="./assets/room2.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title"> King Room </h5>
+                          <h6 class="card-secondtitle"> 950 SQ FT room with beach view </h6>
+                          <p class="card-text"> • One king size bed </p>
+                          <p class="card-text"> • Seed Bar, fireplace and large balcony </p>
+                          <p class="card-text"> • Small kitchen with a refrigerator and stove </p>
+                          <a href="#" class="btn btn-primary rounded-0 ps-4 pe-4"> Reserve </a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-4">
+                    <div class="card rounded-0 border-0" style="width: 18rem;">
+                        <img src="./assets/room3.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title"> Beach Side Suite </h5>
+                          <h6 class="card-secondtitle"> 1500 SQ FT Suite with beach view </h6>
+                          <p class="card-text"> • One California king size bed </p>
+                          <p class="card-text"> • Second room with fireplace, hot tub, and balcony </p>
+                          <p class="card-text"> • Seed Bar and coffee station </p>
+                          <p class="card-text"> • Full kitchen with a refrigerator, stove, and island </p>
+                          <a href="#" class="btn btn-primary rounded-0 ps-4 pe-4"> Reserve </a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+      </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
