Room Cards Updated

--- a/index.html
+++ b/index.html
@@ -97,47 +97,61 @@
             <div class="row">
                 <p class="room-titletext"> Our Rooms </p>
             </div>
-            <div class="row">
-                <div class="col-4">
-                    <div class="card rounded-0 border-0" style="width: 18rem;">
-                        <img src="./assets/room1.jpg" class="card-img-top rounded-0" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title"> Queen Room </h5>
-                          <h6 class="card-secondtitle"> 850 SQ FT room with city view </h6>
-                          <p class="card-text"> • One queen size bed </p>
-                          <p class="card-text"> • Seed Bar, fireplace and large balcony </p>
-                          <p class="card-text"> • Small kitchen with a refrigerator and stove </p>
-                          <a href="#" class="btn btn-primary rounded-0 ps-4 pe-4"> Reserve </a>
-                        </div>
-                      </div>
+            <div class="row d-flex justify-content-center">
+                <div class="card rounded-0 border-0 p-0 ms-2" style="width: 18rem;">
+                    <img src="./assets/room1.jpg" class="card-img-top rounded-0" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"> Queen Room </h5>
+                        <h6 class="card-secondtitle"> 850 SQ FT room with city view </h6>
+                        <p class="card-text"> • One queen size bed </p>
+                        <p class="card-text"> • Seed Bar, fireplace and large balcony </p>
+                        <p class="card-text"> • Small kitchen with a refrigerator and stove </p>
+                        <a href="#" class="btn btn-primary btn-margin rounded-0 ps-4 pe-4"> Reserve </a>
+                    </div>
                 </div>
-                <div class="col-4">
-                    <div class="card rounded-0 border-0" style="width: 18rem;">
-                        <img src="./assets/room2.jpg" class="card-img-top rounded-0" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title"> King Room </h5>
-                          <h6 class="card-secondtitle"> 950 SQ FT room with beach view </h6>
-                          <p class="card-text"> • One king size bed </p>
-                          <p class="card-text"> • Seed Bar, fireplace and large balcony </p>
-                          <p class="card-text"> • Small kitchen with a refrigerator and stove </p>
-                          <a href="#" class="btn btn-primary rounded-0 ps-4 pe-4"> Reserve </a>
-                        </div>
-                      </div>
+                <div class="card rounded-0 border-0 p-0 ms-2" style="width: 18rem;">
+                    <img src="./assets/room2.jpg" class="card-img-top rounded-0" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"> King Room </h5>
+                        <h6 class="card-secondtitle"> 950 SQ FT room with beach view </h6>
+                        <p class="card-text"> • One king size bed </p>
+                        <p class="card-text"> • Seed Bar, fireplace and large balcony </p>
+                        <p class="card-text"> • Small kitchen with a refrigerator and stove </p>
+                        <a href="#" class="btn btn-primary btn-margin rounded-0 ps-4 pe-4"> Reserve </a>
+                    </div>
                 </div>
-                <div class="col-4">
-                    <div class="card rounded-0 border-0" style="width: 18rem;">
-                        <img src="./assets/room3.jpg" class="card-img-top rounded-0" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title"> Beach Side Suite </h5>
-                          <h6 class="card-secondtitle"> 1500 SQ FT Suite with beach view </h6>
-                          <p class="card-text"> • One California king size bed </p>
-                          <p class="card-text"> • Second room with fireplace, hot tub, and balcony </p>
-                          <p class="card-text"> • Seed Bar and coffee station </p>
-                          <p class="card-text"> • Full kitchen with a refrigerator, stove, and island </p>
-                          <a href="#" class="btn btn-primary rounded-0 ps-4 pe-4"> Reserve </a>
-                        </div>
-                      </div>
+                <div class="card rounded-0 border-0 p-0 ms-2" style="width: 18rem;">
+                    <img src="./assets/room3.jpg" class="card-img-top rounded-0" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"> Beach Side Suite </h5>
+                        <h6 class="card-secondtitle"> 1500 SQ FT Suite with beach view </h6>
+                        <p class="card-text"> • One California king size bed </p>
+                        <p class="card-text"> • Second room with fireplace, hot tub, and balcony </p>
+                        <p class="card-text"> • Seed Bar and coffee station </p>
+                        <p class="card-text"> • Full kitchen with a refrigerator, stove, and island </p>
+                        <a href="#" class="btn btn-primary rounded-0 ps-4 pe-4"> Reserve </a>
+                    </div>
                 </div>
+            </div>
+        </div>
+      </div>
+
+      <!-- Packages -->
+
+      <div class="container">
+        <div class="row">
+            <p class="packages-titletext"> Packages </p>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <img src="./assets/hamsterwedding.jpg" alt="Hamster Wedding">
+            </div>
+            <div class="col-6">
+                <h5> Beach Wedding package </h5>
+                <h6> Starting US $1,500.00 </h6>
+                <p> 
+                    Feel the warmth of the beach as the flames in your hearts ignite during our romantic beach side wedding. All wedding packages include catering, an open bar, and one tier wedding cake (9" Vanilla standard cake). A private dinner for your closets family members and friends will be provided after the ceremony. 
+                </p>
             </div>
         </div>
       </div>
