--- a/index.html
+++ b/index.html
@@ -195,19 +195,28 @@
                     Here at La Petite Maison, we invite you to enjoy our services in hopes that you have the most relaxing stay we can provide. 
                 </p>
             </div>
-            <div class="row">
-                <div class="col">
-                    <img src="./assets/24hour.png" alt="">
+            <div class="row amenities-images-placement">
+                <div class="col text-center">
+                    <img class="amenities-images" src="./assets/24hour.png" alt="">
+                    <p class="amenities-text"> 24 Hour Room Service </p>
                 </div>
-                <div class="col">
-
+                <div class="col text-center">
+                    <img class="amenities-images" src="./assets/breakfast.png" alt="">
+                    <p class="amenities-text"> Complimentary Breakfast </p>
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col text-center">
+                    <img class="valet-image" src="./assets/valet.png" alt="">
+                    <p class="amenities-text"> Valet Parking </p>
+                </div>
+                <div class="col text-center">
+                    <img class="pool-image" src="./assets/pool.png" alt="">
+                    <p class="amenities-text"> Beachside Pool </p>
+                </div>
             </div>
         </div>
-
       </div>
+
+      <!-- Reserve A Room -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
