Reserve Room Updated

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <div class="container-fluid container-height p-0 m-0">
         <div class="row">
-            <img class="header-image" src="./assets/header.jpg" alt="beach resort banner">
+            <img class="header-image p-0" src="./assets/header.jpg" alt="beach resort banner">
         </div>
         <div class="container header-text text-center p-5">
             <h2> Run on the wheel of luxury </h2>
@@ -91,7 +91,7 @@
 
       <div class="container-fluid room-container p-0">
         <div class="row">
-            <img class="roomcard-background" src="./assets/bg2.jpg" alt="Hall Background">
+            <img class="roomcard-background p-0" src="./assets/bg2.jpg" alt="Hall Background">
         </div>
         <div class="container card-container">
             <div class="row">
@@ -186,7 +186,7 @@
 
       <div class="container-fluid amenities-container p-0">
         <div class="row">
-            <img class="amenities-background" src="./assets/bg.jpg" alt="Beach Resort Background">
+            <img class="amenities-background p-0 m-0" src="./assets/bg.jpg" alt="Beach Resort Background">
         </div>
         <div class="container amenities-subcontainer">
             <div class="row">
@@ -197,19 +197,19 @@
             </div>
             <div class="row amenities-images-placement">
                 <div class="col text-center">
-                    <img class="amenities-images" src="./assets/24hour.png" alt="">
+                    <img class="amenities-images" src="./assets/24hour.png" alt="Room Service Logo">
                     <p class="amenities-text"> 24 Hour Room Service </p>
                 </div>
                 <div class="col text-center">
-                    <img class="amenities-images" src="./assets/breakfast.png" alt="">
+                    <img class="amenities-images" src="./assets/breakfast.png" alt="Breakfast Logo">
                     <p class="amenities-text"> Complimentary Breakfast </p>
                 </div>
                 <div class="col text-center">
-                    <img class="valet-image" src="./assets/valet.png" alt="">
+                    <img class="valet-image" src="./assets/valet.png" alt="Valet Logo">
                     <p class="amenities-text"> Valet Parking </p>
                 </div>
                 <div class="col text-center">
-                    <img class="pool-image" src="./assets/pool.png" alt="">
+                    <img class="pool-image" src="./assets/pool.png" alt="Pool Logo">
                     <p class="amenities-text"> Beachside Pool </p>
                 </div>
             </div>
@@ -217,6 +217,45 @@
       </div>
 
       <!-- Reserve A Room -->
+
+      <div class="container-fluid">
+        <div class="container reserve-container">
+            <div class="row reserverow-bg">
+                <div class="col-12 reserve-title pt-4 pb-4">
+                    Reserve A Room
+                </div>
+                <div class="container input-container">
+                    <div class="row">
+                        <div class="col">
+                            <p class="reserve-text m-0 mb-1"> Check-in </p>
+                            <input class="reserve-input mb-5" type="search" name="" id="">
+                        </div>
+                        <div class="col">
+                            <p class="reserve-text m-0 mb-1"> Check-out </p>
+                            <input class="reserve-input mb-5" type="search" name="" id="">
+                        </div>
+                        <div class="col">
+                            <p class="reserve-text m-0 mb-1"> Number of Guests </p>
+                            <input class="reserve-input mb-5" type="search" name="" id="">
+                        </div>
+                        <div class="col">
+                            <p class="reserve-text m-0 mb-1"> Room Type </p>
+                            <input class="reserve-input mb-5" type="search" name="" id="">
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-primary ps-2 pe-2 pt-1 pb-1 rounded-0 reserve-button"
+                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                            Check Availability
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <img class="reserve-image p-0" src="./assets/hamsterreserve.jpg" alt="Hamster in a sunflower seed bowl">
+            </div>
+        </div>
+      </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
