--- a/index.html
+++ b/index.html
@@ -257,6 +257,25 @@
         </div>
       </div>
 
+      <!-- Footer -->
+
+      <footer>
+        <div class="container-fluid footer-bg">
+            <div class="row d-flex justify-content-center pt-4 pb-4">
+                <img class="footer-logo" src="./assets/Logo.png" alt="Hamster Hotel Logo">
+            </div>
+            <div class="row">
+                <p class="footer-text"> 123 Sunflower Seed Rd., Cavia, California 95205 </p>
+            </div>
+            <div class="row pb-5">
+                <p class="footer-text"> ©LA PETITE MAISON HOTELS LIMITED 1939-2018. ALL RIGHTS RESERVED. </p>
+            </div>
+
+        </div>
+      </footer>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
