Organized/Sectioned Code

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="col-6 packages-text-wedding p-0">
                     <h5 class="packages-title"> Beach Wedding package </h5>
                     <h6 class="packages-subtitle"> Starting US $1,500.00 </h6>
-                    <p class="packages-description"> 
+                    <p class="packages-description pe-3"> 
                         Feel the warmth of the beach as the flames in your hearts ignite during our romantic beach side wedding. All wedding packages include catering, an open bar, and one tier wedding cake (9" Vanilla standard cake). A private dinner for your closets family members and friends will be provided after the ceremony. 
                     </p>
                 </div>
@@ -159,7 +159,7 @@
                 <div class="col-6 p-0">
                     <h5 class="packages-title"> Full Bloom Package </h5>
                     <h6 class="packages-subtitle"> Starting US $1,000.00 </h6>
-                    <p class="packages-description">
+                    <p class="packages-description pe-3">
                         Enjoy the shade of our cherry trees as you join us during our spring time celebration. We invite you to our orchards for cherry, strawberry, and apple picking that is open all day. We end each evening with fresh, vegetable centric dinners along with a live show from local musicians.
                     </p>
                 </div>
@@ -173,7 +173,7 @@
                     <div class="col-6 p-0 ps-2">
                         <h5 class="packages-title"> Cheese and Seed Tour Package </h5>
                         <h6 class="packages-subtitle"> Starting US $1,200.00 </h6>
-                        <p class="packages-description">
+                        <p class="packages-description pe-3">
                             Immerse yourself in the flavors of Cavia with our Cheese and Seed tour. We consulted with connoisseurs from around the globe to bring you the best flavors that nature has to offer, and create our cheeses right here at our local creamery. Cheese and seeds are served all day and nightly spa treatment is provided after dinner.
                         </p>
                     </div>
