--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav align-items-end">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#"> Overview </a>
+                <a class="nav-link" aria-current="page" href="#overview"> Overview </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> Rooms </a>
+                <a class="nav-link" href="#rooms"> Rooms </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> Packages </a>
+                <a class="nav-link" href="#packages"> Packages </a>
               </li>
               <li>
                 <img src="./assets/Logo.png" alt="Hamster Hotel Logo">
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> Amenities </a>
+                <a class="nav-link" href="#amenities"> Amenities </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> Contact </a>
+                <a class="nav-link" href="#contact"> Contact </a>
               </li>
               <li>
                 <a class="nav-link border border-light pt-0 ms-3" href="#"> Reserve </a>
@@ -59,12 +59,12 @@
 
       <!-- Introduction -->
 
-      <div class="container intro-container ps-5 pe-5">
+      <div id="overview" class="container intro-container ps-5 pe-5">
         <div class="row">
             <div class="col-4"> 
                 <img class="hamster-image" src="./assets/hamsterhomejpg.jpg" alt="Hamster on a beach chair">
             </div>
-            <div class="col-7 intro-text">
+            <div id="overview" class="col-7 intro-text">
                 <h3> Welcome to a hamster's paradise </h3>
                 <p> 
                     Nestled in the heart of Cavia California, La Petite Maison is a luxury hotel designed for the small mammal with extravagance in mind. Escape to the warm comforts of stunning rooms, a relaxing spa, and a pool with a beach side view.
@@ -89,7 +89,7 @@
 
       <!-- Our Room Cards / Background -->
 
-      <div class="container-fluid room-container p-0">
+      <div id="rooms" class="container-fluid room-container p-0">
         <div class="row">
             <img class="roomcard-background p-0" src="./assets/bg2.jpg" alt="Hall Background">
         </div>
@@ -138,7 +138,7 @@
 
       <!-- Packages -->
 
-      <div class="container-fluid">
+      <div id="packages" class="container-fluid">
         <div class="container packages-container">
             <div class="row">
                 <p class="packages-titletext"> Packages </p>
@@ -184,7 +184,7 @@
 
       <!-- Amenities -->
 
-      <div class="container-fluid amenities-container p-0">
+      <div id="amenities" class="container-fluid amenities-container p-0">
         <div class="row">
             <img class="amenities-background p-0 m-0" src="./assets/bg.jpg" alt="Beach Resort Background">
         </div>
@@ -218,7 +218,7 @@
 
       <!-- Reserve A Room -->
 
-      <div class="container-fluid">
+      <div id="contact" class="container-fluid">
         <div class="container reserve-container">
             <div class="row reserverow-bg">
                 <div class="col-12 reserve-title pt-4 pb-4">
