White Space Fix

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
       <div id="amenities" class="container-fluid amenities-container p-0">
         <div class="row">
-            <img class="amenities-background p-0 m-0" src="./assets/bg.jpg" alt="Beach Resort Background">
+            <img class="amenities-background p-0" src="./assets/bg.jpg" alt="Beach Resort Background">
         </div>
         <div class="container amenities-subcontainer">
             <div class="row">
