Amenities Fixed Padding/Width

--- a/index.html
+++ b/index.html
@@ -195,22 +195,24 @@
                     Here at La Petite Maison, we invite you to enjoy our services in hopes that you have the most relaxing stay we can provide. 
                 </p>
             </div>
-            <div class="row amenities-images-placement">
-                <div class="col text-center">
-                    <img class="amenities-images" src="./assets/24hour.png" alt="Room Service Logo">
-                    <p class="amenities-text"> 24 Hour Room Service </p>
-                </div>
-                <div class="col text-center">
-                    <img class="amenities-images" src="./assets/breakfast.png" alt="Breakfast Logo">
-                    <p class="amenities-text"> Complimentary Breakfast </p>
-                </div>
-                <div class="col text-center">
-                    <img class="valet-image" src="./assets/valet.png" alt="Valet Logo">
-                    <p class="amenities-text"> Valet Parking </p>
-                </div>
-                <div class="col text-center">
-                    <img class="pool-image" src="./assets/pool.png" alt="Pool Logo">
-                    <p class="amenities-text"> Beachside Pool </p>
+            <div class="container amenities-width">
+                <div class="row amenities-images-placement">
+                    <div class="col text-center">
+                        <img class="amenities-images" src="./assets/24hour.png" alt="Room Service Logo">
+                        <p class="amenities-text"> 24 Hour Room Service </p>
+                    </div>
+                    <div class="col text-center">
+                        <img class="amenities-images" src="./assets/breakfast.png" alt="Breakfast Logo">
+                        <p class="amenities-text"> Complimentary Breakfast </p>
+                    </div>
+                    <div class="col text-center">
+                        <img class="valet-image" src="./assets/valet.png" alt="Valet Logo">
+                        <p class="amenities-text"> Valet Parking </p>
+                    </div>
+                    <div class="col text-center">
+                        <img class="pool-image" src="./assets/pool.png" alt="Pool Logo">
+                        <p class="amenities-text"> Beachside Pool </p>
+                    </div>
                 </div>
             </div>
         </div>
