Navbar Scroll Fixed Section Scroll

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="#contact"> Contact </a>
               </li>
               <li>
-                <a class="nav-link border border-light pt-0 ms-3" href="#"> Reserve </a>
+                <a class="nav-link border border-light pt-0 ms-3" href="#reserve"> Reserve </a>
               </li>
             </ul>
           </div>
@@ -220,7 +220,7 @@
 
       <!-- Reserve A Room -->
 
-      <div id="contact" class="container-fluid">
+      <div id="reserve" class="container-fluid">
         <div class="container reserve-container">
             <div class="row reserverow-bg">
                 <div class="col-12 reserve-title pt-4 pb-4">
@@ -262,7 +262,7 @@
       <!-- Footer -->
 
       <footer>
-        <div class="container-fluid footer-bg">
+        <div id="contact" class="container-fluid footer-bg">
             <div class="row d-flex justify-content-center pt-4 pb-4">
                 <img class="footer-logo" src="./assets/Logo.png" alt="Hamster Hotel Logo">
             </div>
