--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p>
                     Inspired by the warm beauty of the California Coast, we invite you to enjoy the rich accommodations along with our unmatched luxury. Discover the satisfaction of indulging in our quality rooms, and thank you for choosing La Petite Maison.
                 </p>
-                <div class="row">
+                <div class="row intro-images">
                     <div class="col-4">
                         <img class="image-finest" src="./assets/awardfinest.png" alt="Award for the finest quality">
                     </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="card rounded-0 border-0 p-0 ms-2" style="width: 18rem;">
-                    <img src="./assets/room1.jpg" class="card-img-top rounded-0" alt="Queen Bedroom">
+                    <img class="card-image" src="./assets/room1.jpg" class="card-img-top rounded-0" alt="Queen Bedroom">
                     <div class="card-body">
                         <h5 class="card-title"> Queen Room </h5>
                         <h6 class="card-secondtitle"> 850 SQ FT room with city view </h6>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="card rounded-0 border-0 p-0 ms-2" style="width: 18rem;">
-                    <img src="./assets/room2.jpg" class="card-img-top rounded-0" alt="King Bedroom">
+                    <img class="card-image" src="./assets/room2.jpg" class="card-img-top rounded-0" alt="King Bedroom">
                     <div class="card-body">
                         <h5 class="card-title"> King Room </h5>
                         <h6 class="card-secondtitle"> 950 SQ FT room with beach view </h6>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="card rounded-0 border-0 p-0 ms-2" style="width: 18rem;">
-                    <img src="./assets/room3.jpg" class="card-img-top rounded-0" alt="Suite Room">
+                    <img class="card-image" src="./assets/room3.jpg" class="card-img-top rounded-0" alt="Suite Room">
                     <div class="card-body">
                         <h5 class="card-title"> Beach Side Suite </h5>
                         <h6 class="card-secondtitle"> 1500 SQ FT Suite with beach view </h6>
@@ -244,9 +244,8 @@
                             <p class="reserve-text m-0 mb-1"> Room Type </p>
                             <input class="reserve-input mb-5" type="search" name="" id="">
                         </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-primary ps-2 pe-2 pt-1 pb-1 rounded-0 reserve-button"
-                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        <div class="col button-position">
+                            <button type="button" class="btn btn-primary ps-2 pe-2 pt-1 pb-1 rounded-0 reserve-button">
                             Check Availability
                             </button>
                         </div>
