Mobile Responsiveness (somewhat)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="row">
             <img class="header-image p-0" src="./assets/header.jpg" alt="beach resort banner">
         </div>
-        <div class="container header-text text-center p-5">
+        <div class="container header-container header-text text-center p-5">
             <h2> Run on the wheel of luxury </h2>
             <p> Explore everything the beach has to offer on our relaxing resort </p>
         </div>
